implementação da quantidade de entregas e dos extravios no extrato

--- a/View/View.Boletos.NmXhdpiPh.fmx
+++ b/View/View.Boletos.NmXhdpiPh.fmx
@@ -12,17 +12,49 @@ inherited view_Boletos_NmXhdpiPh: Tview_Boletos_NmXhdpiPh
         inherited imageExit: TImage
           MultiResBitmap.Height = 48
           MultiResBitmap.Width = 48
+          MultiResBitmap = <
+            item
+              Width = 48
+              Height = 48
+              PNG = {
+                89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
+                87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+                028B494441546843ED96CFAB125114C7BD6391A4EF9110B50905112909836760
+                8B56F627541BFF0CC1852B712122AEDCB40CDAB433087AD183B77963D05270A1
+                E00F5CAA4F7998BF4DD1CEB9334F74CA98D7CC3CEED4FDC041EF3D87B9E79CFB
+                BD73C7C2E170381C0EE71F85743A9D27DD6E3788FFA529F3402A954A70B95C9E
+                835D349BCD673827B9D8E732F9CE5A66B1585C88A218409F14C22EA45EAF0721
+                E1B69C3BA5D1689C8642A1FBE897C2D8043BFF1492DF741EA956AB673E9FEF21
+                F86F630C8D6490CBE4CFE5BC29907CC1ED763F02BF0363682483FCB6F3B55A4D
+                3453F23B9A87E4CFBC5EAF1FFCE6EB3CCA662B79814632C83ECD7F75B95CA649
+                5EA9F9C256F24CCBE697F73CCAC6E3F13C06FF219815E3349A6AAE124C4AA552
+                D0EFF71F5BADD67BF29C056EDC55ABD53AB6DBED7D9BCDF6037C6BD9F5570882
+                B01E8FC7DF9C4EE73B18AEA459ED9072B97C84DF3672D30DA5D7EBBD87356F49
+                4BFF19B5074D28168B07B3D94CD543B5028D4219AACA4DAD84F06187C964F245
+                341A7DEB703850EB14941048EB147E673044F95C49C34A0821ABD168540887C3
+                6F6088CFD48D1B60771389C4ABC160D097779BD26EB7C540208087D80DE6D268
+                0FC09C60B89EEED02260275E0F87C39D22E0E09D4422115CF8A61CA7C50CBD43
+                70015A046CF577397FCA7C3EFF128BC50EC0AF4946D7C176113B3B01457CCEE5
+                729B33C2329B2294729A4C269F32990CEE04F3ECDD092C020E3C7E5630CFDE33
+                61D622943BF1D1744528EF89E974FA219BCDDAA530B6A145E06507077B2327B8
+                23FAF97CFE087CCCBF5E919D22405283743AFD12E6F0D5AA7B014675048BB893
+                4AA59EC3E73189C7E30518F7C196E8D41323B7148BB081E11A5330DD93BF0E30
+                79239BC4E170389CFF1A8BE52773058A81ABA293C40000000049454E44AE4260
+                82}
+              FileName = 
+                'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
+                'ages\arrow_return\res\mipmap-mdpi\ic_launcher.png'
+            end>
         end
-      end
-      inherited labelTitle: TLabel
-        Size.Width = 400.000000000000000000
-        TextSettings.Font.StyleExt = {00060000000100000004000000}
+        inherited labelTitle: TLabel
+          Size.Width = 400.000000000000000000
+          TextSettings.Font.StyleExt = {00060000000100000004000000}
+        end
       end
     end
     inherited layoutFiltro: TLayout
       Size.Width = 400.000000000000000000
       inherited buttonProcurar: TButton
-        StyledSettings = [Family, Size, Style]
         IconTintColor = claWhite
         Position.X = 152.000000000000000000
         TextSettings.FontColor = claWhite
