--- a/View/View.Boletos.fmx
+++ b/View/View.Boletos.fmx
@@ -40,27 +40,28 @@ object view_Boletos: Tview_Boletos
               PNG = {
                 89504E470D0A1A0A0000000D49484452000000300000003008060000005702F9
                 87000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                0289494441546843ED96CF8B525114C77D9A24E90C09519B5010118B3018035B
-                B4B23FA1DAF867082E5C890B1171E5A665D0A69D41D04403B3190D5A0A220AFE
-                C0AD8E32983F5344FB9EFBDE883A194E4F87FBEA7EE0C0BBF71CDEFD9E7BCFFD
-                A1130804028140F08F22359BCDA7AD56CB4BDF729776904AA5927732999CC32E
-                EAF5FA73EA935DFC7329BE3957188FC717994CC6433E39845FA46AB5EA85E086
-                A29D51ABD54E7D3EDF03F2CB617C4233FF0CE217334F94CBE53397CBE586FF0E
-                C5B0480EB9147FAEE866407CD66EB73F82DF42312C92437E3BF3954A25A325F1
-                2B350FF1674EA7F331FCDA9B792A9B25F17A16C9219B6AFE9BCD66D38CF82B33
-                BF249EEBB2B972CE937887C3F104FE439881E254DAD65C2758CAE7F35EB7DB7D
-                6C341AEF2B7D3ADCB833BC798ECD6673C764324D0C06C35C71FD157ABD7E3E18
-                0CBE5BADD6F768CEE45EF548C562F188DE36CAA4EF9576BBFD0163DE9687FE33
-                DB6E347D2E973B40025BFD542DD3E994CA702B6DDB9610FDEC301A8DBE0C0683
-                EF2C160BD53A834AA850289C62D09F6852F95CAB86D7912469D6EFF7B37EBFFF
-                2D9AF4CF9D710B762F1289BCEE76BB1D65B5198D4623E3F1786813DB613695F6
-                106685D1783B8725819578D3EBF55692C0C63B09040234B0518953637BBD4368
-                00960496FA87A29F81E3F56B28143A805F5519DD04CB49ACAC0492F8924AA516
-                7B84671649AC97D37038FC9C48246825B867E34A5012D8F0F4ACE09E8D7B42AB
-                49ACAFC427CD25B17E4F8C46A38FC964D22C87F10D4B822E3B6CEC4539E18EE8
-                A4D3E923F8B83F5E8995245052DD783CFE0A7D74B4EE3C817DCD08257137168B
-                BDC0F3580A87C359B43BB0293977C93E97949230C1688C116CE7E26F0212BFCF
-                4912080402C17F8D4EF70BC4978A3000414B150000000049454E44AE426082}
+                028B494441546843ED96CFAB125114C79DB17C92BE47C2A336A120A21561F00C
+                6CD1CAFE846AE39F21B870252E44C4959B96419B7606412F0ADEE68D414B4150
+                C11FB8D5511EE66F53B473EE4CE2D833E635E3E34EDD0F1C70EE39CCFD9E7BBF
+                77AE260683C1603018FF285CBBDD7EDCE97402F85B1A320E5CA55209CC663311
+                E2A2D96C3EC53129453FBFC4B75732D3E9F44210043FE6A4127AE1EAF53A8A6F
+                C9DA098D46E32C180CDEC5BC544627B8F24F36571EA956ABE75EAFF73EE46F61
+                0DA9A410221EAC22CABA09203EEF72B91E40DE8E35A492422E5DF95AAD261849
+                BCC2F320FEDCE3F13C84BCF1561E6DB3219E279514B2CBF35F9D4EA731C45FB6
+                F21BE2A9B6CD6FDF7914EF76BB1F41FE08C28C751A43355729E68AC562C0E7F3
+                9D5A2C963BF298099A598AA2786AB3D97A56ABF587D96C5EC9A9BF82E7F9D568
+                34FAE67038DEC2E3521AD50E572E974F40ACC2F3FBA2DBEDBE83390FA4A9FF8C
+                DA83C6170A85C3F97CAEEAA55A592C16684355DAD45A085F769448249E472291
+                3776BB1DBD4E400B954AA53398740A8F689F2B79781B8EE396C3E1301F0A855E
+                C323BE53376E401CC7E3F197FD7EBF27EF36A1D56A097EBF1F0FB10BC2A931EE
+                413820703EDD214DC04EBC1A0C068A26E0E07D0987C338F14DB94E4BECF50EC1
+                094813B0D5DF65FD04B0D3E768347A08794D36BA0E369B50EC0434F1299BCDAE
+                CF08CDAC9BD8B6D3783CFE984EA77127A867E74E601370E0F16F05F5EC3C1346
+                6D627B273E18AE89ED7B623299BCCF643236A98C6E481378D9C1C15EDB09EE88
+                5E2E973B811CF59F5744D10458AA9F4AA55EC0187E5A756F605F2B824DDC4E26
+                93CFE0EF31178BC5F2F0DC835860524FF6B9A5D8841502E79840E82EFE3A40F1
+                FB5C240683C160FCD7984C3F01F1C68A1E57F37E2E0000000049454E44AE4260
+                82}
               FileName = 
                 'C:\Users\TI\Desktop\Workspace\Projetos\Delphi\DeliveryControl\im' +
                 'ages\arrow_return\res\mipmap-mdpi\ic_launcher.png'
@@ -111,6 +112,7 @@ object view_Boletos: Tview_Boletos
         Action = actionProcurar
         Enabled = True
         StyledSettings = [Family, Size, Style]
+        IconTintColor = claDodgerblue
         ImageIndex = -1
         Position.X = 136.000000000000000000
         Position.Y = 16.000000000000000000
@@ -146,6 +148,7 @@ object view_Boletos: Tview_Boletos
       object buttonGravar: TButton
         Action = actionGravar
         Enabled = True
+        IconTintColor = claDodgerblue
         ImageIndex = -1
         Position.X = 288.000000000000000000
         Position.Y = 88.000000000000000000
@@ -209,7 +212,7 @@ object view_Boletos: Tview_Boletos
       RowCount = 0
       Options = [ColumnResize, ColumnMove, ColLines, RowLines, Tabs, Header, HeaderClick, AutoDisplacement]
       Viewport.Width = 369.000000000000000000
-      Viewport.Height = 231.000000000000000000
+      Viewport.Height = 199.000000000000000000
       object columnLinha: TColumn
         Header = 'C'#243'digo Linha'
         Size.Width = 161.000000000000000000
